skillcareer-infra/k8s/dev/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-ui
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-ui
  template:
    metadata:
      labels:
        app: frontend-ui
    spec:
      containers:
        - name: frontend-ui
          image: suwetha07/skillcareer-frontend:v1.0.1
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-ui
  namespace: dev
spec:
  selector:
    app: frontend-ui
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
